--- a/assets/less/_main.less
+++ b/assets/less/_main.less
@@ -133,11 +133,13 @@
   .banner {
     transform: translateY(-48px);
     display: flex;
+    box-shadow: 0px 1px #ccc;
 
     .col__inner {
       height: 256px;
       background: #fff;
       text-align: center;
+      box-shadow: 1px 1px 4px #ccc;
     }
 
     &__img {
